src/snapshots/enderpy__lexer__tests__numeric-octal-7.snap
---
source: src/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o7",
        ),
        start: 0,
        end: 3,
    },
]
