src/snapshots/enderpy__lexer__tests__raw-bytes-literals-1.snap
---
source: src/lexer.rs
description: "rb\"world\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"world\"",
        ),
        start: 0,
        end: 9,
    },
]
