src/snapshots/enderpy__lexer__tests__raw-bytes-literals-2.snap
---
source: src/lexer.rs
description: "rb\"\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"\"",
        ),
        start: 0,
        end: 4,
    },
]
