src/snapshots/enderpy__lexer__tests__raw-bytes-literals-3.snap
---
source: src/lexer.rs
description: "a = rb\"hello\""
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: RawBytes,
        value: String(
            "rb\"hello\"",
        ),
    },
]
