src/snapshots/enderpy__lexer__tests__raw-bytes-literals-4.snap
---
source: src/lexer.rs
description: "rb'hello'"
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb'hello'",
        ),
        start: 0,
        end: 9,
    },
]
