src/snapshots/enderpy__lexer__tests__raw-bytes-literals-6.snap
---
source: src/lexer.rs
description: "rb'''hello'''"
---
[
    Token {
        kind: RawBytes,
        value: String(
            "rb'''hello'''",
        ),
    },
]
