src/snapshots/enderpy__lexer__tests__raw-f-string-literals-1.snap
---
source: src/lexer.rs
description: "rf\"world\""
---
[
    Token {
        kind: RawFString,
        value: Str(
            "rf\"world\"",
        ),
        start: 0,
        end: 9,
    },
]
