src/snapshots/enderpy__lexer__tests__raw-f-string-literals-3.snap
---
source: src/lexer.rs
description: "a = rf\"hello\""
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
    Token {
        kind: Assign,
        value: None,
    },
    Token {
        kind: RawFString,
        value: String(
            "rf\"hello\"",
        ),
    },
]
